--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,12 @@ body {
     text-align: center;
 }
 
+.logo {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 10px;
+}
+
 h1 {
     color: #0066cc;
 }
